--- a/style/start.css
+++ b/style/start.css
@@ -1,38 +1,64 @@
 *{font-size:15px;padding:0;margin: 0}
 .start{
-  margin: 30px;
-  float:left;
+  width: 100vw;
+  height: 100vh;
+  display: flow-root;
+  background-image:url('../img/banner.jpg');
+  background-size: cover;
+  text-align: center
 }
 .start h1{
-  font-size:18px;
+  font-size:30px;
+  text-shadow:2px 2px white;
+  margin: 20vh auto 0 auto
 }
-.start>div{
-  margin:20px 0
+.start .title{
+  color:#1e90ff;
+  font-weight: bold;
+  font-size:20px;
+  text-shadow:1px 1px white;
+  vertical-align: top;
+}
+.start > div {
+  text-align: center
+}
+.start .difficult{
+  margin: 20px 0 0 0
 }
 .start select,.start select option{
-  font-size: 14px;
+  font-size: 16px;
   padding: 2px;
 }
+.start .upload{
+  margin: 20px 0 0 0
+}
 .start button{
+  margin: 20px 0 0 0;
+  display: block;
+  font-size: 20px;
+  width: 100px;
+  margin:auto;
   background:white;
   padding: 4px;
   border-radius: 3px;
   border: 1px solid black
 }
-
-.start .title{
-  color:#1e90ff;
-  font-weight: bold 
+.tip{
+  text-align: center;
+  margin-top: 20px;
 }
-.start .look{
-  width: 200px;
-  display: block;
+.source{
+  position: relative;
+}
+.sourceimg{
+  width: 150px;
+  position: absolute;
+  left:20px;
+  top:50vh
 }
 #canvas{
-  display: flow-root;
-  margin: auto;
-  border: 1px solid black;
-  width:420px
+  display: none;
+  margin: 0 auto;
 }
 canvas{
   border: 1px solid white;
